<resources>
    <string name="app_name" translatable="false">kola wallet</string>
    <string name="entertainment">Ent</string>
    <string name="title_bookkeeping">BOOKKEEPING</string>
    <string name="airtime_transfer">Airtime\nTransfer</string>
    <string-array name="periods">
        <item name="week">weekly</item>
        <item name="monthly">Monthly</item>
        <item name="trimester">trimester</item>
        <item name="semester">semester</item>

        <item name="annual">annual</item>
    </string-array>
    <string-array name="periods_temp">

        <item name="monthly">Monthly</item>

    </string-array>
    <string name="beauty_bookkeeping">beauty</string>
    <string name="coffee_bookkeeping">Grocery</string>
    <string name="restaurant_bookkeeping">Restaurant</string>
    <string name="saving_bookkeeping">Saving</string>
    <string name="healthcare_bookkeeping">healthcare</string>
    <string name="home_bookkeeping">home</string>
    <string name="bills_bookkeeping">bills</string>
    <string name="kids_bookkeeping">kids</string>
    <string name="communication_bookkeeping">communication</string>
    <string name="sport_bookkeeping">sport</string>
    <string name="transport_bookkeeping">transport</string>
    <string name="travel_bookkeeping">travel</string>
    <string name="bookkeeping_title">Bookkeeping</string>
    <string name="title_om" translatable="false">ORANGE</string>
    <string name="title_momo" translatable="false">MOMO</string>
    <string name="mtn_momo" translatable="false">MTN MoMo</string>
    <string name="orange_momey" translatable="false">Orange Money</string>
    <string name="today">today</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="description">description</string>
    <string name="select_image_bookkeeping">Select Image</string>
    <string name="education_bookkeeping">education</string>
    <string name="error_qr_code">Error reading information</string>
    <string name="recepteur_non_valide">Invalid receiver</string>
    <string name="enter_cashflow">Enter Cashflow</string>
    <string name="search_str">Search</string>
    <string name="delete_str">Delete</string>
    <string name="transaction">Transaction</string>
    <string name="notifications_str">Notifications</string>
    <string name="days_str">Days</string>
    <string name="title_education">education</string>
    <string name="title_personal_fin">Personal Finance</string>
    <string name="send_to">Send to</string>
    <string name="kola_certified">Sent With KOLA WALLET</string>
    <string name="service">Service</string>
    <string name="date_transfer_detail">Date</string>
    <string name="sender">Sender</string>
    <string name="sender_s_no">Sender\'s No</string>
    <string name="receiver">Receiver</string>
    <string name="receiver_s_no">Receiver\'s No</string>
    <string name="amount">Amount</string>
    <string name="frees">Fees</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="send">SEND</string>
    <string name="contacts">Contacts</string>
    <string name="ok_str">ok</string>
    <string name="to">To</string>
    <string name="transaction_type">Transaction type</string>
    <string name="transfer">Transfer</string>
    <string name="settins">Settings</string>
    <string name="report_a_problem">Report a problem on the bill</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="account">Account</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="done">Done</string>
    <string name="is_it_th_right_person">Is it the right person?</string>
    <string name="airtime_statistics">Statistics</string>
    <string name="statistics_detail">Statistics Detail</string>
    <string name="comments">Comments</string>
    <string name="term_and_condition">Terms and Condition</string>
    <string name="contact_us_str">Contact Us</string>
    <string name="content_description_btn_expand">click to expand to view more details</string>
    <string name="content_description_btn_exit">click here to exit the sub view</string>
    <string name="content_description_btn_copy">click to copy the text</string>
    <string name="contact_Kola">Contact Kola</string>
    <string name="email_str">Email</string>
    <string name="kola_base_email" translatable="false">anselmk@kolafin.com</string>
    <string name="phone_base_sample" translatable="false">+237659405715</string>
    <string name="url_terms_and_condition" translatable="false">https://www.google.com</string>
    <string name="dynamik_link_url" translatable="false">https://kolaapplication.page.link</string>
    <string name="phone_str">Phone</string>
    <string name="title_setting_view">Settings</string>
    <string name="terms_and_condition_not_avalaible">Terms and conditions are not avalaible</string>
    <string name="email_copy">Email copy</string>
    <string name="phone_copy">Phone copy</string>
    <string name="profil_checklist_title">Settings</string>
    <string name="profil_detail_title">Profile</string>
    <string name="security_checklist_on">Security Checklist</string>
    <string name="irreversible_money_transfer">Irreversible Money transfer</string>
    <string name="is_it_the_right_person">is it the right person ?</string>
    <string name="is_it_the_right_amount">is it the right amount ?</string>
    <string name="number">Number</string>
    <string name="balance">Balance</string>
    <string name="view_details_str">View Details</string>
    <string name="edit_str">Edit</string>
    <string name="budget_str">BUDGET</string>
    <string name="budget_name_str">Budget Name</string>
    <string name="save_str">Save</string>
    <string name="recurrence_str">Recurrence</string>
    <string name="starting_date_str">Starting Date</string>
    <string name="create_budget_str">Create Budget</string>
    <string name="title_statistics">STATISTICS</string>
    <string name="budgeded_str">budgeted</string>
    <string name="_100_000" translatable="false">100 000</string>
    <string name="edit_bucket_str">Edit Budget</string>
    <string name="spend_str">Spend</string>
    <string name="remaining_str">Remaining</string>
    <string name="percentage_str">Percentage</string>
    <string name="budget_details">Budget Details</string>
    <string name="text_theme">Budget themes</string>
    <string name="tetx_show_total_budget_only">Show total budget only</string>
    <string name="text_show_subbudget_details">Show Sub budget details</string>
    <string name="text_sim_card_history">Sim Card History</string>
    <string name="text_orange" translatable="false">ORANGE</string>
    <string name="text_mtn" translatable="false">Mtn</string>
    <string name="kola_wallet" translatable="false">Kola Wallet</string>
    <string name="better_control_of_your_finances">Better control of your finances</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_use_a_number">Please enter a mobile money number which is in your phone.</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_the_6_digits_start">We send 6 digits pin by SMS to </string>
    <string name="enter_the_6_digits_end">\n \nYou will be signed in automatically</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="name">Name</string>
    <string name="email_2">Email</string>
    <string name="mtn_phone">MTN Phone</string>
    <string name="orange_phone">Orange Phone</string>
    <string name="future_message">Plan your transactions here. \n \n Add a new future transaction.</string>
    <string name="done_str">Done</string>
    <string name="invalid_phone_number">Invalid or unsupported number</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="enter_valid_phone_number">Please enter a valid phone number</string>
    <string name="enter_verification_code">Please enter the verification code</string>
    <string name="code_verification_failed">Verification code failed, please check your phone number or your internet connection.</string>
    <string name="saving_progress">Account intialialisation in progress…</string>
    <string name="alert_delete">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="successful_str">Successful</string>
    <string name="update_successful_str">Update Successful</string>
    <string name="error_message">An error occur. Try again.</string>
    <string name="error_amount">the amount is not correct</string>
    <string name="complete_fields_msg">Please complete the fields before sending…</string>
    <string name="enter_your_user_name">Please enter your user name</string>
    <string name="enter_orng_phone_number">Please enter your valid Orange phone Number</string>
    <string name="enter_momo_phone_number">Please enter your valid momo phone Number</string>
    <string name="search_contact">Search contact</string>
    <string name="no_transaction_category">No transactions for this category</string>
    <string name="transaction_detail_title">Receipt</string>
    <string name="erreur_analyse">Analysis error!</string>
    <string name="new_balance">new balance</string>
    <string name="ras_str">RAS</string>
    <string name="weekly">7 days</string>
    <string name="budgetised">Budgetised</string>
    <string name="all">All</string>
    <string name="transactions">Transactions</string>
    <string name="filter">Filter</string>
    <string name="statistic">statistics</string>
    <string name="momo_or_om" translatable="false">MOMO | OM</string>
    <string name="momo_plus_om" translatable="false">MOMO + OM</string>
    <string name="range">RANGE</string>
    <string name="monthly">30 days</string>
    <string name="annual">12 months</string>
    <string name="trimester">3 months</string>
    <string name="semester">6 months</string>
    <string name="title_permissions">Permissions</string>
    <string name="description_permission">We take privacy very seriously. We use these permissions strictly for the stated purpose.</string>
    <string name="continue_str">Continue</string>
    <string name="accessibility">Accessibility</string>
    <string name="permission_accessibility_explanantion">Allows the app to run USSDs payment steps automatically</string>
    <string name="_1" translatable="false">1-</string>
    <string name="permission_accessibility_1">Go to or Search <b> Accessibility </b> in your parameters</string>
    <string name="_2" translatable="false">2-</string>
    <string name="permission_accessibility_2">Find <b><font color="#543C52">Kola Wallet</font></b></string>
    <string name="_3" translatable="false">3-</string>
    <string name="permission_accesibility_3">Switch on or activate accessibility permission for Kola Wallet</string>
    <string name="_4">4-</string>
    <string name="permission_accessibility_4">Return to Kola Wallet</string>
    <string name="recipe">Receipt</string>
    <string name="transfer_aigaine">Tranfer again</string>
    <string name="by_date_range">By date range</string>
    <string name="by_amount">By Amount</string>
    <string name="up">Up</string>
    <string name="history">History</string>
    <string name="guaranteeing">Guaranteeing</string>
    <string name="highest_first">Highest First</string>
    <string name="borrowing_reason">Borrowing Reason</string>
    <string name="health">Health</string>
    <string name="food">Food</string>
    <string name="school">School</string>
    <string name="transport">Transport</string>
    <string name="emergency">Emergency</string>
    <string name="add_contact">+Add contact</string>
    <string name="add_guarantors">Add Guarantors</string>
    <string name="click_to_add_guarantor">Click to add guarantor</string>
</resources>