<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_balance_transaction_merge_option"
        android:icon="@drawable/ic_filter_list_white"
        android:iconTint="@color/white"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/filter_balance_transaction_merge"
                android:title="@string/by_date_range" />
            <item
                android:id="@+id/filter_balance_transaction_by_amount"
                android:title="@string/by_amount" />
        </menu>
    </item>

    <item
        android:id="@+id/search_balance_transaction_merge"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/search_str"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_balance_transaction_merge_by_amount"
        android:icon="@drawable/ic_baseline_arrow_upward"
        android:iconTint="@color/white"
        android:title="@string/up"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/stattistic_balance_transaction_merge"
        android:icon="@drawable/ic_theme"
        android:iconTint="@color/white"
        android:title="@string/statistic"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/id_momo_or_om_merge"
                    android:title="@string/momo_or_om" />
                <item
                    android:id="@+id/id_momo_plus_om_merge"
                    android:title="@string/momo_plus_om" />
            </group>
            <item
                android:id="@+id/id_filter_sub_menu_merge"
                android:title="@string/range">

                <menu>
                    <group
                        android:id="@+id/id_range_menu_group_merge"
                        android:checkableBehavior="single">
                        <item
                            android:id="@+id/id_filter_weekly_merge"
                            android:title="@string/weekly" />
                        <item
                            android:id="@+id/id_filter_monthly_merge"
                            android:title="@string/monthly" />
                        <item
                            android:id="@+id/id_filter_trimester_merge"
                            android:title="@string/trimester" />
                        <item
                            android:id="@+id/id_filter_semester_merge"
                            android:title="@string/semester" />
                        <item
                            android:id="@+id/id_filter_annual_merge"
                            android:title="@string/annual" />
                        <item
                            android:id="@+id/id_filter_all_merge"
                            android:title="@string/all" />
                    </group>
                </menu>

            </item>
        </menu>
    </item>

</menu>