<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/id_transaction_bugetized"
        android:icon="@drawable/ic_budgetized"
        android:orderInCategory="100"
        android:title="@string/budgetised"
        app:showAsAction="never" />

    <item
        android:id="@+id/id_transaction_see_more_user_transaction"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="100"
        android:title="@string/transactions"
        app:showAsAction="never" />

    <item
        android:id="@+id/id_transaction_recip"
        android:icon="@drawable/ic_receipt"
        android:orderInCategory="100"
        android:title="@string/recipe"
        app:showAsAction="never" />

    <item
        android:id="@+id/id_transaction_repete_transaction"
        android:icon="@drawable/ic_money_transfer_pry"
        android:orderInCategory="100"
        android:title="@string/transfer_aigaine"
        app:showAsAction="never" />

</menu>