<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_bottom_sheet_borrowing_reason"
    style="@style/AppBottomSheetDialogTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    app:layout_behavior="com.kola.kolawallet.ui.createTransaction.helpersClass.LockedBottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_30dp"
        android:layout_marginVertical="@dimen/dim_20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrowing_reason"
            android:textColor="@color/color_gray_707070"
            android:textSize="@dimen/dim_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_57dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/id_borrowing_reason_block1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/id_borrowing_reason_health"
                    style="@style/style_borrow_reason_type_campaign"
                    android:layout_width="@dimen/dimen_w_tab_layout_campaign"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/health"
                    android:textSize="@dimen/dimen_14sp" />

                <TextView
                    android:id="@+id/id_borrowing_reason_food"
                    style="@style/style_borrow_reason_type_campaign"
                    android:layout_width="@dimen/dimen_w_tab_layout_campaign"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_8dp"
                    android:enabled="true"
                    android:text="@string/food"
                    android:textSize="@dimen/dimen_14sp" />

                <TextView
                    android:id="@+id/id_borrowing_reason_school"
                    style="@style/style_borrow_reason_type_campaign"
                    android:layout_width="@dimen/dimen_w_tab_layout_campaign"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/school"
                    android:textSize="@dimen/dimen_14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_borrowing_reason_block2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_9dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/id_borrowing_reason_transport"
                    style="@style/style_borrow_reason_type_campaign"
                    android:layout_width="@dimen/dimen_w_tab_layout_campaign"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:enabled="true"
                    android:text="@string/transport"
                    android:textSize="@dimen/dimen_14sp" />

                <TextView
                    android:id="@+id/id_borrowing_reason_emergency"
                    style="@style/style_borrow_reason_type_campaign"
                    android:layout_width="@dimen/dimen_w_tab_layout_campaign"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/emergency"
                    android:textSize="@dimen/dimen_14sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/id_borrowing_reason_button"
            style="@style/button_default_style"
            android:layout_width="100dp"
            android:layout_marginTop="@dimen/dimen_57dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:text="@string/ok_str" />
    </LinearLayout>
</androidx.cardview.widget.CardView>