<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_true"
    android:padding="@dimen/dimen_16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_shield"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/permission_accessibility_title"
                style="@style/PermmissionsTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/title_permissions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/permission_accessibility_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/dimen_64dp"
                android:text="@string/description_permission"
                android:textSize="@dimen/dimen_13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_title" />

            <ImageView
                android:id="@+id/permission_accessibility_icon"
                android:layout_width="@dimen/dimen_32dp"
                android:layout_height="@dimen/dimen_32dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_accessibility_without_circles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_description" />

            <TextView
                android:id="@+id/permission_accessibility_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/accessibility"
                android:textColor="@color/permission_dark_green_accessibility"
                android:textSize="@dimen/dimen_15sp"
                app:layout_constraintBottom_toBottomOf="@+id/permission_accessibility_icon"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_icon" />

            <TextView
                android:id="@+id/permission_accessibility_description_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="84dp"
                android:text="@string/permission_accessibility_explanantion"
                android:textSize="@dimen/dimen_13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_icon"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_icon" />

            <TextView
                android:id="@+id/permission_accessibility_step_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/_1"
                android:textColor="@color/permission_dark_green_accessibility"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_icon"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_description_2" />

            <TextView
                android:id="@+id/permission_accessibility_step_1_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="64dp"
                android:text="@string/permission_accessibility_1"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_step_1"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_description_2" />

            <TextView
                android:id="@+id/permission_accessibility_step_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/_2"
                android:textColor="@color/permission_dark_green_accessibility"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_icon"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_step_1_description" />

            <TextView
                android:id="@+id/permission_accessibility_step_2_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:text="@string/permission_accessibility_2"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_step_2"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_step_1_description" />

            <TextView
                android:id="@+id/permission_accessibility_step_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/_3"
                android:textColor="@color/permission_dark_green_accessibility"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_icon"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_step_2_description" />

            <TextView
                android:id="@+id/permission_accessibility_step_3_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:text="@string/permission_accesibility_3"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_step_3"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_step_2_description" />

            <TextView
                android:id="@+id/permission_accessibility_step_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/_4"
                android:textColor="@color/permission_dark_green_accessibility"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_icon"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_step_3_description" />

            <TextView
                android:id="@+id/permission_accessibility_step_4_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:text="@string/permission_accessibility_4"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/permission_accessibility_step_4"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_step_3_description" />

            <Button
                android:id="@+id/permission_accessibility_btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_24dp"
                android:layout_marginBottom="@dimen/dim_24dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="@dimen/dimen_48dp"
                android:paddingEnd="@dimen/dimen_48dp"
                android:text="@string/continue_str"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/permission_accessibility_step_4_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>