<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_bottom_sheet_add_guarantor"
    style="@style/AppBottomSheetDialogTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    app:layout_behavior="com.kola.kolawallet.ui.createTransaction.helpersClass.LockedBottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_20dp"
        android:layout_marginVertical="@dimen/dim_20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_guarantors"
            android:textColor="@color/color_gray_707070"
            android:textSize="@dimen/dim_16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_add_guarantor_bs_rv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_300dp"
            android:layout_marginTop="@dimen/dimen_50dp"
            tools:listitem="@layout/item_add_guarantor" />

        <TextView
            android:id="@+id/id_add_guarantor_bs_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:gravity="center"
            android:text="@string/click_to_add_guarantor"
            app:drawableStartCompat="@drawable/ic_baseline_add_circle_outline_919191" />


        <Button
            android:id="@+id/id_add_guarantor_bs_button"
            style="@style/button_default_style"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dim_40dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:text="@string/add_contact" />
    </LinearLayout>
</androidx.cardview.widget.CardView>